# gtest_template

./: .clang-format  .cmake-format  CMakeLists.txt  LICENSE  README.md  bat.sh  build_and_test.sh
cmake/: CompilerWarnings-x86.cmake  GoogleTestDownloadAndBuild.cmake  adas_cmake_functions.cmake
interp2d/: CMakeLists.txt  interp2d.cpp  interp2d.hpp  interp2d_spec.cpp
my_project/: CMakeLists.txt  my_project.cpp  my_project.hpp  my_project_spec.cpp  roman_numerals.hpp  roman_numerals.md  roman_numerals_spec.cpp
ring_buffer/: CMakeLists.txt  ring_buffer.cpp  ring_buffer.hpp  ring_buffer_spec.cpp
roman_numerals/: CMakeLists.txt  roman_numerals.cpp  roman_numerals.hpp  roman_numerals_spec.cpp
